--- a/manifest.json
+++ b/manifest.json
@@ -11,10 +11,25 @@
     "128": "icons/icon-128.png",
     "500": "icons/icon-500.png"
   },
+  "browser_action": {
+    "default_icon": "icons/icon-48.png",
+    "theme_icons": [{
+        "light": "icons/icon-48.png",
+        "dark": "icons/icon-48.png",
+        "size": 32
+    }],
+    "default_title": "deepblur",
+    "default_popup": "index.html"
+  },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": true,
+    "type": "module"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["background.js"]
+      "js": ["content.js"]
     }
   ]
 
